# slimchain

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .rgignore  CITATION.cff  Cargo.toml  Dockerfile  Makefile  README.md  baseline_config.toml.example  config.toml.example  rust-toolchain  rustfmt.toml
.cargo/: config
baseline/: Cargo.toml
baseline-classic/: Cargo.toml
baseline-classic/src/: block.rs  config.rs  db.rs  lib.rs
baseline-classic/src/behavior/: propose.rs  verify.rs
baseline-classic/src/block/: raft.rs
baseline-classic/src/network/pow/: miner.rs
baseline-classic/src/network/raft/: client_block_proposal.rs  client_network.rs  message.rs
baseline-stateful/: Cargo.toml
baseline-stateful/src/: behavior.rs  block_proposal.rs  lib.rs  node.rs  snapshot.rs
baseline-stateful/src/behavior/: commit.rs  propose.rs  verify.rs
baseline-stateful/src/network/: pow.rs  raft.rs
baseline-stateful/src/network/pow/: client.rs  miner.rs  storage.rs
baseline-stateful/src/network/raft/: client.rs  client_block_proposal.rs  client_network.rs  client_storage.rs  message.rs  rpc.rs  storage.rs
baseline/src/: behavior.rs  block.rs  config.rs  db.rs  lib.rs
baseline/src/behavior/: commit.rs  propose.rs  verify.rs
baseline/src/block/: pow.rs  raft.rs
baseline/src/network/: pow.rs  raft.rs
baseline/src/network/pow/: client.rs  miner.rs
baseline/src/network/raft/: client.rs  client_block_proposal.rs  client_network.rs  client_storage.rs  rpc.rs
config-example/: baseline_stateful_pow.toml  baseline_stateful_raft.toml  pow.toml
config_example/: baseline_classic_raft.toml  baseline_pow.toml  baseline_raft.toml  pow.toml  raft.toml
contracts/: Makefile  compile.sh  truffle-config.js
contracts/contracts/: cpuheavy.sol  donothing.sol  ioheavy.sol  kvstore.sol  simple_storage.sol  smallbank.sol
scripts/: install_deps.sh  install_sgx_driver.sh  process-metrics.rb
slimchain/: Cargo.toml
slimchain-chain/: Cargo.toml
slimchain-chain/src/: access_map.rs  behavior.rs  block.rs  block_proposal.rs  config.rs  conflict_check.rs  consensus.rs  db.rs  latest.rs  lib.rs  loader.rs  role.rs  snapshot.rs  tests.rs
slimchain-chain/src/access_map/: acc_access_map.rs  acc_rev_access_map.rs  block_height_list.rs  pruning.rs  tests.rs
slimchain-chain/src/behavior/: commit.rs  execute.rs  propose.rs  verify.rs
slimchain-chain/src/consensus/: pow.rs
slimchain-common/: Cargo.toml
slimchain-common/src/: basic.rs  collections.rs  digest.rs  ed25519.rs  iter.rs  lib.rs  rw_set.rs  tx.rs  tx_req.rs  utils.rs
slimchain-common/src/basic/: account.rs  address.rs  block.rs  block_height.rs  code.rs  nonce.rs  shard_id.rs  state.rs
slimchain-common/src/tx/: multi_signed_tx.rs  raw_tx.rs  signed_tx.rs
slimchain-contract-utils/: Cargo.toml
slimchain-contract-utils/src/: lib.rs
slimchain-merkle-trie/: Cargo.toml
slimchain-merkle-trie/src/: draw.rs  hash.rs  lib.rs  nibbles.rs  partial_trie.rs  prelude.rs  proof.rs  read.rs  storage.rs  tests.rs  traits.rs  u4.rs  write.rs
slimchain-merkle-trie/src/partial_trie/: branch.rs  diff.rs  extension.rs  leaf.rs  prune.rs  sub_tree.rs
slimchain-merkle-trie/src/proof/: branch.rs  extension.rs  leaf.rs  sub_proof.rs
slimchain-merkle-trie/src/write/: partial_trie.rs  trie.rs
slimchain-network/: Cargo.toml
slimchain-network/src/: behavior.rs  config.rs  control.rs  discovery.rs  http.rs  lib.rs  p2p.rs  pubsub.rs  rpc.rs
slimchain-network/src/behavior/: pow.rs  raft.rs
slimchain-network/src/behavior/pow/: client.rs  miner.rs  ordered_stream.rs  storage.rs
slimchain-network/src/behavior/raft/: client.rs  client_block_proposal.rs  client_network.rs  client_storage.rs  message.rs  storage.rs  utils.rs
slimchain-network/src/behaviors/: pow.rs
slimchain-network/src/behaviors/pow/: client.rs  miner.rs  ordered_stream.rs  storage.rs
slimchain-network/src/discovery/: tests.rs
slimchain-network/src/http/: client_rpc.rs  common.rs  config.rs  node_rpc.rs  tests.rs
slimchain-network/src/p2p/: control.rs  discovery.rs  http.rs  pubsub.rs  rpc.rs
slimchain-network/src/p2p/discovery/: tests.rs
slimchain-network/src/p2p/http/: tests.rs
slimchain-network/src/p2p/rpc/: codec.rs  tests.rs
slimchain-network/src/rpc/: codec.rs  tests.rs
slimchain-tee-sig/: Cargo.toml  build.rs
slimchain-tee-sig/src/: attestation_report.rs  lib.rs  tee_signed_tx.rs
slimchain-tx-engine/: Cargo.toml
slimchain-tx-engine-simple/: Cargo.toml
slimchain-tx-engine-simple/src/: lib.rs
slimchain-tx-engine-tee/: Cargo.toml  build.rs
slimchain-tx-engine-tee-enclave/: Cargo.toml  Makefile  config.xml  enclave.edl  enclave.lds  private.pem  rust-toolchain
slimchain-tx-engine-tee-enclave/.cargo/: config
slimchain-tx-engine-tee-enclave/src/: exec_tx.rs  lib.rs  quote_pk.rs  rand.rs
slimchain-tx-engine-tee/src/: config.rs  ecall.rs  engine.rs  intel_api.rs  lib.rs  ocall.rs  tests.rs
slimchain-tx-engine/src/: lib.rs
slimchain-tx-executor/: Cargo.toml
slimchain-tx-executor/src/: lib.rs
slimchain-tx-state/: Cargo.toml
slimchain-tx-state/src/: lib.rs  mem_tx_state.rs  partial_trie.rs  read.rs  read_proof.rs  tests.rs  view.rs  write.rs
slimchain-tx-state/src/partial_trie/: diff.rs  sharding.rs  storage_tx_trie.rs  tx_proposal.rs  tx_trie.rs  tx_trie_trait.rs  write_set_partial_trie.rs  write_set_proof.rs  write_set_trie.rs
slimchain-tx-state/src/view/: trie_view.rs  trie_view_sync.rs  tx_state_view.rs  tx_state_view_with_update.rs
slimchain-utils/: Cargo.toml
slimchain-utils/src/: config.rs  lib.rs  metrics.rs  ordered_stream.rs  path.rs  serde.rs
slimchain/src/: inspect.rs  lib.rs  node.rs
