[workspace]
members = [
    "slimchain-common",
    "slimchain-merkle-trie",
    "slimchain-tee-sig",
    "slimchain-tx-engine",
    "slimchain-tx-engine-simple",
    "slimchain-tx-executor",
    "slimchain-tx-state",
    "slimchain-utils",
]
exclude = [
    "rust-sgx-sdk",
]

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = "off"
opt-level = 0

[profile.test]
lto = "off"
opt-level = 0
