[workspace]
members = [
    "baseline",
    "slimchain",
    "slimchain-chain",
    "slimchain-common",
    "slimchain-merkle-trie",
    "slimchain-network",
    "slimchain-tee-sig",
    "slimchain-tx-engine",
    "slimchain-tx-engine-simple",
    "slimchain-tx-engine-tee",
    "slimchain-tx-executor",
    "slimchain-tx-state",
    "slimchain-utils",
]
exclude = [
    "rust-sgx-sdk",
    "slimchain-tx-engine-tee-enclave",
]

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = "off"
opt-level = 0

[profile.test]
lto = "off"
opt-level = 0
