[package]
name = "baseline"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
color-backtrace = "0.5"
futures = "0.3"
kvdb = "0.7"
kvdb-rocksdb = "0.9"
libp2p = "0.32"
once_cell = "1.5"
postcard = { version = "0.5", features = ["alloc"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
slimchain-chain = { path = "../slimchain-chain" }
slimchain-common = { path = "../slimchain-common" }
slimchain-merkle-trie = { path = "../slimchain-merkle-trie" }
slimchain-network = { path = "../slimchain-network" }
slimchain-tx-executor = { path = "../slimchain-tx-executor" }
slimchain-tx-state = { path = "../slimchain-tx-state" }
slimchain-utils = { path = "../slimchain-utils" }
structopt = "0.3"
tokio = { version = "0.2", features = ["full", "parking_lot"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
