[package]
name = "baseline"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
async-raft = "0.6.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
color-backtrace = "0.5"
futures = "0.3"
git-version = "0.3"
itertools = "0.10"
kvdb = "0.9"
kvdb-rocksdb = "0.11"
# libp2p = "0.35"
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "c897df3f3449ababc2754df384c02bdbcc40fbc1" }
once_cell = "1.5"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
slimchain-chain = { path = "../slimchain-chain" }
slimchain-common = { path = "../slimchain-common" }
slimchain-merkle-trie = { path = "../slimchain-merkle-trie" }
slimchain-network = { path = "../slimchain-network" }
slimchain-tx-executor = { path = "../slimchain-tx-executor" }
slimchain-tx-state = { path = "../slimchain-tx-state" }
slimchain-utils = { path = "../slimchain-utils" }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.2", features = ["full", "parking_lot"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
warp = "0.3"
