[package]
name = "slimchain-chain"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
arc-swap = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
im = { version = "15.0", features = ["serde"] }
itertools = "0.9"
kvdb = "0.7"
kvdb-rocksdb = "0.9"
once_cell = "1.4"
postcard = { version = "0.5", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
slimchain-common = { path = "../slimchain-common" }
slimchain-tx-state = { path = "../slimchain-tx-state" }
slimchain-utils = { path = "../slimchain-utils" }
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
kvdb-memorydb = "0.7"
postcard = { version = "0.5", features = ["alloc"] }
serde_json = "1.0"
serial_test = "0.5"
slimchain-tx-engine = { path = "../slimchain-tx-engine" }
slimchain-tx-engine-simple = { path = "../slimchain-tx-engine-simple" }
