[package]
name = "slimchain-chain"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
arc-swap = "1.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
im = { version = "15.0", features = ["serde"] }
itertools = "0.10"
kvdb = "0.8"
kvdb-rocksdb = "0.10"
once_cell = "1.5"
pin-project = "1.0"
postcard = { version = "0.5", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
slimchain-common = { path = "../slimchain-common" }
slimchain-tx-engine = { path = "../slimchain-tx-engine" }
slimchain-tx-state = { path = "../slimchain-tx-state" }
slimchain-utils = { path = "../slimchain-utils" }
tokio = { version = "1.0", features = ["full", "parking_lot"] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
kvdb-memorydb = "0.8"
rand = "0.7"
serde_json = "1.0"
slimchain-tx-engine-simple = { path = "../slimchain-tx-engine-simple" }
