[package]
name = "slimchain-chain"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
arc-swap = "1.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
#im = { version = "15.0", features = ["serde"] }
im = { git = "https://github.com/arthurprs/im-rs/", branch = "fix", features = ["serde"] }
itertools = "0.10"
kvdb = "0.10"
kvdb-rocksdb = "0.14"
once_cell = "1.8"
pin-project = "1.0"
serde = { version = "1.0", features = ["derive"] }
slimchain-common = { path = "../slimchain-common" }
slimchain-merkle-trie = { path = "../slimchain-merkle-trie" }
slimchain-tx-engine = { path = "../slimchain-tx-engine" }
slimchain-tx-state = { path = "../slimchain-tx-state" }
slimchain-utils = { path = "../slimchain-utils" }
tokio = { version = "1.9", features = ["full", "parking_lot"] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
kvdb-memorydb = "0.10"
rand = "0.7"
serde_json = "1.0"
slimchain-tx-engine-simple = { path = "../slimchain-tx-engine-simple" }
