[package]
name = "slimchain-common"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[features]
default = [
    "std",
    "primitive-types-rlp",
]
std = [
    "anyhow/std",
    "blake2b_simd/std",
    "ed25519-dalek/std",
    "primitive-types/std",
    "serde/std",
]
primitive-types-rlp = [
    "primitive-types/rlp",
]

[dependencies]
anyhow = { version = "1.0", default-features = false }
bitflags = "1.2"
blake2b_simd = { version = "0.5", default-features = false }
derive_more = "0.99"
ed25519-dalek = { version = "1.0.0-pre.4", default-features = false, features = ["u64_backend", "alloc", "batch", "serde"] }
hashbrown = { version = "0.8", features = ["serde"] }
hex = "0.4"
primitive-types = { version = "0.7", default-features = false, features = ["serde_no_std", "byteorder"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
postcard = { version = "0.5", features = ["alloc"] }
rand = "0.7"
