[package]
name = "slimchain-common"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[features]
default = [
    "std",
    "primitive-types-rlp",
]
std = [
    "anyhow/std",
    "blake2b_simd/std",
    "ed25519/std",
    "ed25519-dalek/std",
    "hex/std",
    "primitive-types/std",
    "serde/std",
]
primitive-types-rlp = [
    "primitive-types/rlp",
]

[dependencies]
anyhow = { version = "1.0", default-features = false }
bitflags = "1.2"
blake2b_simd = { version = "0.5", default-features = false }
derive_more = "0.99"
ed25519 = { version = "1", default-features = false, features = ["serde"] }
ed25519-dalek = { version = "1.0", default-features = false, features = ["alloc", "rand", "u64_backend"] }
hashbrown = { version = "0.9", features = ["serde"] }
hex = { version = "0.4", default-features = false }
primitive-types = { version = "0.7", default-features = false, features = ["serde_no_std", "byteorder"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
postcard = { version = "0.5", features = ["alloc"] }
rand = "0.7"
