[package]
name = "slimchain-merkle-trie"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2021"
publish = false

[features]
default = [
    "cache_hash",
    "draw",
    "partial_trie",
    "read",
    "std",
    "write",
]
std = [
    "crossbeam-utils/std",
    "serde/std",
    "slimchain-common/std",
]
draw = []
partial_trie = []
cache_hash = [
    "crossbeam-utils",
]
read = []
write = []

[dependencies]
crossbeam-utils = { version = "0.8", optional = true, default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc", "rc"] }
slimchain-common = { path = "../slimchain-common", default-features = false }
