[package]
name = "slimchain-network"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
async-raft = "0.6.0"
async-trait = "0.1"
bs58 = "0.4"
futures = "0.3"
futures-timer = "3.0"
itertools = "0.10"
libp2p = "0.36"
once_cell = "1.7"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slimchain-chain = { path = "../slimchain-chain" }
slimchain-common = { path = "../slimchain-common" }
slimchain-tx-engine = { path = "../slimchain-tx-engine" }
slimchain-tx-state = { path = "../slimchain-tx-state" }
slimchain-utils = { path = "../slimchain-utils" }
surf = "2.2"
thiserror = "1.0"
tokio = { version = "1.3", features = ["full", "parking_lot"] }
tokio-util = { version = "0.6", features = ["time"] }
tracing = "0.1"
tracing-futures = "0.2"
warp = "0.3"

[dev-dependencies]
serial_test = "0.5"
