[package]
name = "slimchain-tee-sig"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false
build = "build.rs"

[dependencies]
base64 = "0.13"
chrono = "0.4"
pem = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sgx_types = { path = "../rust-sgx-sdk/sgx_types" }
slimchain-common = { path = "../slimchain-common" }
tracing = "0.1"
webpki = { version = "0.22", features = ["alloc"] }
x509-parser = "0.12"

[build-dependencies]
webpki = "0.22"
