[package]
name = "slimchain-tx-engine-simple"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
slimchain-common = { path = "../slimchain-common" }
slimchain-merkle-trie = { path = "../slimchain-merkle-trie" }
slimchain-tx-engine = { path = "../slimchain-tx-engine" }
slimchain-tx-executor = { path = "../slimchain-tx-executor" }
slimchain-tx-state = { path = "../slimchain-tx-state" }

[dev-dependencies]
rand = "0.7"
slimchain-utils = { path = "../slimchain-utils" }
tokio = { version = "1.1", features = ["rt", "macros", "parking_lot"] }
