[package]
name = "slimchain-tx-engine-tee"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false
build = "build.rs"

[dependencies]
base64 = "0.13"
dashmap = "3.11"
hex = "0.4"
once_cell = "1.5"
parking_lot = "0.11"
percent-encoding = "2.1"
postcard = { version = "0.5", features = ["alloc"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
sgx_types = { path = "../rust-sgx-sdk/sgx_types" }
sgx_urts = { path = "../rust-sgx-sdk/sgx_urts" }
slimchain-common = { path = "../slimchain-common" }
slimchain-tee-sig = { path = "../slimchain-tee-sig" }
slimchain-tx-engine = { path = "../slimchain-tx-engine" }
slimchain-tx-state = { path = "../slimchain-tx-state" }
slimchain-utils = { path = "../slimchain-utils" }
tracing = "0.1"
ureq = { version = "1.5", features = ["json"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros", "parking_lot"] }

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
