[package]
name = "slimchain-tx-engine-tee"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
base64 = "0.13"
dashmap = { version = "4.0", features = ["rayon"] }
hex = "0.4"
once_cell = "1.8"
parking_lot = "0.11"
percent-encoding = "2.1"
postcard = { version = "0.7", features = ["alloc"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
sgx_types = { path = "../rust-sgx-sdk/sgx_types" }
sgx_urts = { path = "../rust-sgx-sdk/sgx_urts" }
slimchain-common = { path = "../slimchain-common" }
slimchain-tee-sig = { path = "../slimchain-tee-sig" }
slimchain-tx-engine = { path = "../slimchain-tx-engine" }
slimchain-tx-state = { path = "../slimchain-tx-state" }
slimchain-utils = { path = "../slimchain-utils" }
tracing = "0.1"
ureq = { version = "2.2", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.11", features = ["rt", "macros", "parking_lot"] }

[build-dependencies]
bindgen = "0.59"
cc = "1.0"
