[package]
name = "slimchain-tx-engine"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
crossbeam = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
slimchain-common = { path = "../slimchain-common" }
slimchain-tx-state = { path = "../slimchain-tx-state" }
