[package]
name = "slimchain-tx-engine"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
slimchain-common = { path = "../slimchain-common" }
slimchain-tx-state = { path = "../slimchain-tx-state" }
slimchain-utils = { path = "../slimchain-utils" }
tokio = { version = "1.3", features = ["full", "parking_lot"] }
tracing = "0.1"
