[package]
name = "slimchain-tx-state"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[features]
default = [
    "cache_hash",
    "partial_trie",
    "read",
    "std",
    "write",
    "dump",
]
std = [
    "serde/std",
    "slimchain-common/std",
    "slimchain-merkle-trie/std",
]
partial_trie = [
    "im",
    "read",
    "slimchain-merkle-trie/partial_trie",
    "std",
    "write",
]
cache_hash = [
    "crossbeam-utils",
    "slimchain-merkle-trie/cache_hash",
]
read = [
    "slimchain-merkle-trie/read",
]
write = [
    "slimchain-merkle-trie/write",
]
dump = [
    "std",
    "slimchain-merkle-trie/draw",
]

[dependencies]
crossbeam-utils = { version = "0.8", optional = true }
im = { version = "15.0", optional = true, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
slimchain-common = { path = "../slimchain-common", default-features = false }
slimchain-merkle-trie = { path = "../slimchain-merkle-trie", default-features = false }
