[package]
name = "slimchain-tx-state"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2021"
publish = false

[features]
default = [
    "cache_hash",
    "partial_trie",
    "read",
    "std",
    "write",
    "draw",
]
std = [
    "serde/std",
    "slimchain-common/std",
    "slimchain-merkle-trie/std",
]
partial_trie = [
    "imbl",
    "read",
    "slimchain-merkle-trie/partial_trie",
    "std",
    "write",
]
cache_hash = [
    "crossbeam-utils",
    "slimchain-merkle-trie/cache_hash",
]
read = [
    "slimchain-merkle-trie/read",
]
write = [
    "slimchain-merkle-trie/write",
]
draw = [
    "std",
    "slimchain-merkle-trie/draw",
]

[dependencies]
crossbeam-utils = { version = "0.8", optional = true }
imbl = { version = "1.0", features = ["serde"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
slimchain-common = { path = "../slimchain-common", default-features = false }
slimchain-merkle-trie = { path = "../slimchain-merkle-trie", default-features = false }
