[package]
name = "slimchain-utils"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
chrono = "0.4"
ethabi = "12.0"
hex = "0.4"
rlp = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.9"
slimchain-common = { path = "../slimchain-common" }
toml = "0.5"
tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = "0.2"
