[package]
name = "slimchain-utils"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.5"
ethabi = "12.0"
futures = "0.3"
hex = "0.4"
num_cpus = "1.13"
once_cell = "1.5"
pin-project = "1.0"
rlp = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.9"
slimchain-common = { path = "../slimchain-common" }
tokio = { version = "0.2", features = ["full", "parking_lot"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
